--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -1,3 +1,5 @@
+@layer reset, base, tokens, recipes, utilities;
+
 @font-face {
   font-family: "Overused Grotesk";
   src: url("../static/font/OverusedGrotesk-VF.woff2") format("woff2");
